kubernetes/apps/base/sso/authentik/routes/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-alt
spec:
  hostnames:
    - ${SECRET_SSO_DOMAIN_2}
  parentRefs:
    - name: dev
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
